FIX: Cannot see email in dark mode

--- a/mailDesign/css/main.css
+++ b/mailDesign/css/main.css
@@ -357,6 +357,10 @@ input {
     font-size: 12px;
 }
 
+.darkmode .content .email {
+    color: lightgray;
+}
+
 .content .title {
     user-select: text;
     margin-bottom: 20px;
